2002-06-06  John Levon  <moz@compsoc.man.ac.uk>

	* libutil/op_get_time.c: return "" not NULL
	  on failure, so we don't try to printf NULL
 
	* module/op_dname.c: do_path_hash_2_4 should not be static now 

	* module/oprofile.c: add const
 
2002-06-06  Philippe Elie  <phil.el@wanadoo.fr>

	* module/x86: new directory, for now some small portion
	  of x86 dependant code remains in module/* mainly in
	  oprofile.[ch]. This patch also don't take care about
	  libop/* which are architecture dependant

	* module/op_apic.c:
	* module/op_nmi.c:
	* module/op_syscalls.c:
	* module/oprofile_nmi.S:
	* module/op_fixmap.c: move this file to ...
	* module/x86/op_apic.c:
	* module/x86/op_nmi.c:
	* module/x86/op_syscalls.c:
	* module/x86/oprofile_nmi.S:
	* module/x86/op_fixmap.c: these new files
	* module/x86/op_apic.c: x86 stuff
	* module/x86/arch.mak: specific arch makefile fragment
	* module/op_init.c: move cpu detection code ...
	* module/x86/cpu_type.c: here
	* module/Makefile: handle arch sub-dir
	* module/x86/.cvsignore: new
	* module/oprofile.h: declare the interface to the
	  architecture dependant code

	* Makefile.in:
	* configure.in: handle module/arch
	* make.common.in: avoid -Werror with gcc 2.91
	* make.deps: small tweak allowing to use it in module

2002-06-06  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: use CXXINCLUDES not CXXFLAGS
	for including sstream
 
	* make.common.in: remove duplicate -g -O2
 
	* include/sstream: fix compiler warning to
	  allow -Werror
 
	* libutil/op_file.c:
	* libutil/op_fileio.h:
	* libutil/op_fileio.c: more API fixage

	* libutil++/file_manip.cpp: add missing header
 
2002-06-06  John Levon  <moz@compsoc.man.ac.uk>

	* make.common.in: enable -Werror for CVS builds
	(not in module/)
 
	* dae/opd_image.c:
	* dae/oprofiled.c:
	* libutil/op_deviceio.h:
	* libutil/op_deviceio.c: API fixes

	* libutil++/file_manip.h:
	* libutil++/file_manip.cpp: 
	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp:
	* pp/op_time.cpp: